--- a/src/css/styles.css
+++ b/src/css/styles.css
@@ -1,10 +1,9 @@
 .inline-data-entity {
-  display: inline-block;
-  background-color: red;
-  height: 30px;
-  width: 300px;
+  /* display: inline-block; */
+  background-color: #eff9ff;
   padding: 3px;
-  padding-left: 20px;
+  border: 1px solid teal;
+  border-radius: 8px;
 }
 
 .inline-data-entity-text {
