--- a/src/css/styles.css
+++ b/src/css/styles.css
@@ -1,13 +1,13 @@
 .inline-data-entity {
   /* display: inline-block; */
-  background-color: #eff9ff;
-  padding: 3px;
-  border: 1px solid teal;
-  border-radius: 8px;
+  /* background-color: #eff9ff; */
+  /* padding: 3px; */
+  /* border: 1px solid teal; */
+  /* border-radius: 8px; */
 }
 
 .inline-data-entity-text {
-  background-color: white;
+  /* background-color: white; */
 }
 
 
@@ -20,6 +20,6 @@ bla {
 
 .connected-data-block {
   background-color: lightblue;
-  width: 200px;
-  height: 20px;
+  /* width: 200px; */
+  /* height: 20px; */
 }
