--- a/src/DiscodataOpenlayersMapBlock/style.css
+++ b/src/DiscodataOpenlayersMapBlock/style.css
@@ -3,7 +3,7 @@
   height: 800px;
 }
 
-.ol-popup {
+.popup {
   position: absolute;
   background-color: white;
   box-shadow: 0 1px 4px rgba(0,0,0,0.2);
@@ -14,7 +14,7 @@
   left: -50px;
   min-width: 280px;
 }
-.ol-popup:after, .ol-popup:before {
+.popup:after, .popup:before {
   top: 100%;
   border: solid transparent;
   content: " ";
@@ -23,24 +23,15 @@
   position: absolute;
   pointer-events: none;
 }
-.ol-popup:after {
+.popup:after {
   border-top-color: white;
   border-width: 10px;
   left: 48px;
   margin-left: -10px;
 }
-.ol-popup:before {
+.popup:before {
   border-top-color: #cccccc;
   border-width: 11px;
   left: 48px;
   margin-left: -11px;
-}
-.ol-popup-closer {
-  text-decoration: none;
-  position: absolute;
-  top: 2px;
-  right: 8px;
-}
-.ol-popup-closer:after {
-  content: "✖";
 }
