--- a/src/DiscodataOpenlayersMapBlock/style.css
+++ b/src/DiscodataOpenlayersMapBlock/style.css
@@ -1,39 +1,32 @@
 .map {
   width: 100%;
-  height: 800px;
+  height: 100%;
 }
 
-.popup {
-  position: absolute;
-  background-color: white;
-  box-shadow: 0 1px 4px rgba(0,0,0,0.2);
-  border-radius: .3rem;
-  border: 1px solid #cccccc;
-  bottom: 12px;
-  left: -50px;
+#map-loader.ui.active {
+  position: absolute !important;
+  pointer-events: auto !important;
+  transform: none !important;
+  top: 0 !important;
+  left: 0 !important;
+  right: unset !important;
+  bottom: unset !important;
+  width: 100% !important;
+  height: 100% !important;
+}
+
+#popup.popup {
   min-width: 280px;
+  max-width: 280px;
+  background-color: white;
+  position: absolute;
+  bottom: 10px;
+  transform: translateX(-50%);
 }
 
-.popup:after, .popup:before {
-  top: 100%;
-  border: solid transparent;
-  content: " ";
-  height: 0;
-  width: 0;
-  position: absolute;
-  pointer-events: none;
-}
-.popup:after {
-  border-top-color: white;
-  border-width: 10px;
-  left: 48px;
-  margin-left: -10px;
-}
-.popup:before {
-  border-top-color: #cccccc;
-  border-width: 11px;
-  left: 48px;
-  margin-left: -11px;
+#popup-details {
+  min-width: 420px;
+  background-color: white;
 }
 
 .ol-popup-details {
@@ -46,53 +39,40 @@
   bottom: unset !important;
 }
 
-.ol-dynamic-filter {
-  position: absolute !important;
-  pointer-events: auto !important;
-  transform: none !important;
-  height: 100% !important;
-  top: 0 !important;
-  left: 6rem !important;
-}
-
-.popover-header {
-  padding: .5rem .75rem;
-  margin-bottom: 0;
-  font-size: 1rem;
-  background-color: #f7f7f7;
-  border-bottom: 1px solid #ebebeb;
-  border-top-left-radius: calc(.3rem - 1px);
-  border-top-right-radius: calc(.3rem - 1px);
-}
-
-.popover-actions {
-  text-align: center;
-  padding: 1rem 2rem;
-  background-color: #f7f7f7;
-  border-top: 1px solid #ebebeb;
-  border-bottom-left-radius: calc(.3rem - 1px);
-  border-bottom-right-radius: calc(.3rem - 1px);
-}
-
-.popover-body {
-  padding: .5rem .75rem;
-}
-
-.popover-body code {
-  font-size: 87.5%;
-  color: #e83e8c;
-  word-wrap: break-word;
-}
-
-#popup-details {
-  min-width: 420px;
-  border: 2px solid #417283;
+.ol-overlay-container.show #popup.popup,
+.ol-overlay-container.show #popup-details.popup {
+  box-shadow: 0 1px 4px rgba(0, 0, 0, 0.2);
   border-radius: .3rem;
-  left: unset !important;
-  bottom: unset !important;
-  right: unset !important;
-  top: unset !important;
-  transform: translate(-50%, -50%) !important;
+  border: 1px solid #cccccc;
+}
+
+.ol-overlay-container.show #popup-details.popup {
+  border: 2px solid #417283;
+}
+
+.ol-overlay-container.show #popup.popup:after,
+.ol-overlay-container.show #popup.popup:before {
+  top: 100%;
+  border: solid transparent;
+  content: " ";
+  height: 0;
+  width: 0;
+  position: absolute;
+  pointer-events: none;
+}
+
+.ol-overlay-container.show #popup.popup:after {
+  border-top-color: white;
+  border-width: 10px;
+  left: 50%;
+  transform: translateX(-50%);
+}
+
+.ol-overlay-container.show #popup.popup:before {
+  border-top-color: #cccccc;
+  border-width: 11px;
+  left: 50%;
+  margin-left: -11px;
 }
 
 #popup-details:after,
@@ -104,8 +84,6 @@
   display: flex;
   align-items: center;
   justify-content: space-between;
-  /* background-color: transparent;
-  border-bottom: none; */
   padding: 1rem 2rem;
 }
 
@@ -149,6 +127,44 @@
 
 #popup-details .popover-header .icon:hover {
   fill: #c96052 !important;
+}
+
+.ol-dynamic-filter {
+  position: absolute !important;
+  pointer-events: auto !important;
+  transform: none !important;
+  height: 100% !important;
+  top: 0 !important;
+  left: 6rem !important;
+}
+
+.popover-header {
+  padding: .5rem .75rem;
+  margin-bottom: 0;
+  font-size: 1rem;
+  background-color: #f7f7f7;
+  border-bottom: 1px solid #ebebeb;
+  border-top-left-radius: calc(.3rem - 1px);
+  border-top-right-radius: calc(.3rem - 1px);
+}
+
+.popover-actions {
+  text-align: center;
+  padding: 1rem 2rem;
+  background-color: #f7f7f7;
+  border-top: 1px solid #ebebeb;
+  border-bottom-left-radius: calc(.3rem - 1px);
+  border-bottom-right-radius: calc(.3rem - 1px);
+}
+
+.popover-body {
+  padding: .5rem .75rem;
+}
+
+.popover-body code {
+  font-size: 87.5%;
+  color: #e83e8c;
+  word-wrap: break-word;
 }
 
 .ol-dynamic-filter #dynamic-filter {
@@ -197,7 +213,7 @@
     overflow: hidden;
     transition: width .5s ease-in-out;
   }
-  
+
   .ol-dynamic-filter #dynamic-filter.show {
     width: 100%;
   }
