Stylelint & lint & prettier fix

--- a/src/components/manage/Blocks/DiscodataConnectorBlock/styles.css
+++ b/src/components/manage/Blocks/DiscodataConnectorBlock/styles.css
@@ -11,6 +11,6 @@
 }
 
 #sidebar-properties .accordion .ui.menu .active.item {
-  border: 1px solid #D4D4D5;
+  border: 1px solid #d4d4d5;
   border-radius: 0.28rem !important;
 }
