--- a/src/components/manage/Blocks/SimpleDataTable/styles.less
+++ b/src/components/manage/Blocks/SimpleDataTable/styles.less
@@ -1,21 +1,21 @@
 .simple-data-table {
-  overflow-x: auto;
   padding: 1em;
+  overflow-x: auto;
 
   table {
     > thead {
       > tr > th {
         background: none !important;
-        vertical-align: bottom !important;
-        text-transform: inherit !important;
         color: #000 !important;
+        text-transform: inherit !important;
+        vertical-align: bottom !important;
 
         &::after {
-          content: '';
           display: block;
-          border-bottom: 0.1rem solid #000;
-          padding-top: 0.7rem;
           width: 100%;
+          padding-top: 0.7rem;
+          border-bottom: 0.1rem solid #000;
+          content: '';
         }
 
         &::before {
@@ -27,8 +27,8 @@
         }
 
         &.center::after {
-          margin-left: auto;
           margin-right: auto;
+          margin-left: auto;
         }
 
         &.right::after {
@@ -40,19 +40,19 @@
         }
 
         &.left {
-          text-align: left!important;
+          text-align: left !important;
         }
 
         &.right {
-          text-align: right!important;
+          text-align: right !important;
         }
 
         &.center {
-          text-align: center!important;
+          text-align: center !important;
         }
 
         &.justify {
-          text-align: justify!important;
+          text-align: justify !important;
         }
       }
     }
@@ -71,8 +71,9 @@
   .title-border {
     display: table;
     border-bottom: 2px solid #000;
-    >*:first-child {
-      margin-bottom: 0!important;
+
+    > *:first-child {
+      margin-bottom: 0 !important;
     }
   }
 
@@ -89,15 +90,16 @@
       padding-right: 0;
     }
 
-    th, td {
-      border:none !important;
+    th,
+    td {
+      border: none !important;
     }
   }
 
   table.compact-table {
     tr td {
-      padding-top: 0.3em!important;
-      padding-bottom: 0.3em!important;
+      padding-top: 0.3em !important;
+      padding-bottom: 0.3em !important;
     }
   }
 }
