DataConnectedValue can be collapsed

--- a/src/Utils/DataConnectedValue/styles.css
+++ b/src/Utils/DataConnectedValue/styles.css
@@ -12,3 +12,21 @@ bla {
 .block-container .data-content span {
   white-space: break-spaces;
 }
+
+.formatted-value {
+  overflow: hidden;
+}
+
+.formatted-value.collapsed {
+  display: inline-block;
+  max-height: 180px;
+  -webkit-mask-image: -webkit-gradient(linear,left top,left bottom,from(#000),to(transparent));
+}
+
+button.readmore-button {
+  margin-top: 1rem;
+  cursor: pointer;
+  background-color: transparent;
+  border: none;
+  padding: 0;
+}
