Update style for datatable

--- a/src/components/manage/Blocks/SimpleDataTable/templates/colored/style.less
+++ b/src/components/manage/Blocks/SimpleDataTable/templates/colored/style.less
@@ -1,10 +1,15 @@
 .simple-data-table {
   .colored-table {
     table {
+      background: #fff !important;
       border: 1px solid #e8e8e8 !important;
       border-radius: 12px !important;
       border-collapse: separate !important;
       overflow: hidden;
+
+      thead, td {
+        background-color: #fff;
+      }
 
       th {
         font-weight: bold !important;
