--- a/src/components/manage/Blocks/SimpleDataTable/styles.less
+++ b/src/components/manage/Blocks/SimpleDataTable/styles.less
@@ -62,6 +62,23 @@
         margin-bottom: 0;
       }
     }
+
+    > tfoot {
+      .ui.menu.pagination {
+        .item {
+          &.fitted {
+            padding: 0;
+            min-width: auto;
+          }
+        }
+
+        .ui.loader {
+          &.disabled {
+            visibility: hidden;
+          }
+        }
+      }
+    }
   }
 
   .table-title {
