--- a/src/components/manage/Blocks/SimpleDataTable/templates/smart/style.less
+++ b/src/components/manage/Blocks/SimpleDataTable/templates/smart/style.less
@@ -25,4 +25,53 @@
       line-height: 1rem;
     }
   }
+
+  table {
+    overflow: hidden;
+    border: 1px solid #e8e8e8 !important;
+    background: #fff !important;
+    border-collapse: separate !important;
+    border-radius: 12px !important;
+
+    thead > tr > th::after {
+      display: none;
+    }
+
+    thead,
+    td {
+      background-color: #fff;
+    }
+
+    th {
+      font-weight: bold !important;
+
+      &:after {
+        padding: 0;
+        border: none;
+      }
+    }
+
+    th,
+    td {
+      border-bottom: 1px solid #e8e8e8 !important;
+    }
+
+    tbody {
+      td {
+        height: 46px;
+      }
+
+      tr:last-child {
+        td {
+          border-bottom: none !important;
+        }
+      }
+    }
+
+    tfoot {
+      tr th {
+        border-bottom: none !important;
+      }
+    }
+  }
 }
