Improved data connectors; Breaking changes!!!

--- a/src/components/manage/Blocks/SimpleDataTable/styles.less
+++ b/src/components/manage/Blocks/SimpleDataTable/styles.less
@@ -68,7 +68,11 @@
         .item {
           &.fitted {
             min-width: auto;
-            padding: 0;
+            padding: 0 !important;
+
+            .loader {
+              padding: 0 !important;
+            }
           }
         }
 
