added map with coords & cleared up readmore

--- a/src/components/manage/Blocks/SimpleDataTable/templates/expandable/style.less
+++ b/src/components/manage/Blocks/SimpleDataTable/templates/expandable/style.less
@@ -81,21 +81,26 @@
 
 .readmore-container {
   font-size: 15px;
+
+  .readmore-text {
+    margin: 5px 0;
+  }
+
+  .readmore-action {
+    margin: 0;
+    color: #025e37;
+    font-weight: bold;
+    background-color: transparent;
+    border: 2px solid transparent;
+  
+    cursor: pointer;
+  }
+  
+  .readmore-action:hover {
+    color: #1e8339;
+    border: 2px solid #1e8339;
+    border-radius: 5px;
+  }
 }
 
-.readmore-text {
-  margin: 0;
-}
 
-.readmore-action {
-  margin: 0;
-  margin-left: 5px;
-  color: #025e37;
-  font-weight: bold;
-
-  cursor: pointer;
-}
-
-.readmore-action:hover {
-  color: #1e8339;
-}
