popup skeleton in place

--- a/src/components/manage/Blocks/SimpleDataTable/templates/expandable/style.less
+++ b/src/components/manage/Blocks/SimpleDataTable/templates/expandable/style.less
@@ -92,10 +92,10 @@
     font-weight: bold;
     background-color: transparent;
     border: 2px solid transparent;
-  
+
     cursor: pointer;
   }
-  
+
   .readmore-action:hover {
     color: #1e8339;
     border: 2px solid #1e8339;
@@ -103,4 +103,11 @@
   }
 }
 
+.popup-url {
+  font-size: 24px;
+  font-weight: bold;
+}
 
+.popup-table-container {
+  margin-bottom: 20px;
+}
