Added Table and Popup Logo

--- a/src/components/manage/Blocks/SimpleDataTable/templates/expandable/style.less
+++ b/src/components/manage/Blocks/SimpleDataTable/templates/expandable/style.less
@@ -76,6 +76,11 @@
     .expand-row {
       cursor: pointer;
     }
+    img {
+      width: 100px;
+      max-width: 100% !important;
+      cursor: pointer;
+    }
   }
 }
 
@@ -106,8 +111,19 @@
 .popup-url {
   font-size: 24px;
   font-weight: bold;
+  overflow-wrap: break-word;
+  word-wrap: break-word;
 }
 
 .popup-table-container {
   margin-bottom: 20px;
+}
+
+.popup-logo {
+  height: 100px;
+  margin-left: auto;
+}
+
+.description-container {
+  width: 70%;
 }
