--- a/src/components/manage/Blocks/SimpleDataTable/templates/expandable/style.less
+++ b/src/components/manage/Blocks/SimpleDataTable/templates/expandable/style.less
@@ -78,8 +78,10 @@
     }
     img {
       width: 100px;
+      height: 100px;
       max-width: 100% !important;
       cursor: pointer;
+      object-fit: contain;
     }
   }
 }
@@ -108,6 +110,10 @@
   }
 }
 
+.popup-header {
+  font-size: 1.5rem !important;
+}
+
 .popup-url {
   font-size: 24px;
   font-weight: bold;
@@ -120,8 +126,11 @@
 }
 
 .popup-logo {
-  height: 100px;
+  height: 175px;
+  width: 175px;
   margin-left: auto;
+  margin-right: auto;
+  object-fit: contain;
 }
 
 .description-container {
