--- a/src/components/manage/Blocks/SimpleDataTable/templates/expandable/style.less
+++ b/src/components/manage/Blocks/SimpleDataTable/templates/expandable/style.less
@@ -79,11 +79,17 @@
     }
 
     img {
-      width: 100px;
+      width: 120px;
       max-width: 100% !important;
-      height: 100px;
+      height: 60px;
+      padding: 5px;
       cursor: pointer;
       object-fit: contain;
+    }
+
+    img:hover {
+      border-radius: 5px;
+      box-shadow: 0px 0px 13px -7px #564535;
     }
   }
 }
@@ -136,4 +142,14 @@
 
 .description-container {
   width: 70%;
+}
+
+.popup-table {
+  thead th {
+    background-color: #a7c942 !important;
+  }
+
+  tr:nth-child(odd) td {
+    background-color: #eaf2d3;
+  }
 }
