--- a/src/components/manage/Blocks/SimpleDataTable/templates/expandable/style.less
+++ b/src/components/manage/Blocks/SimpleDataTable/templates/expandable/style.less
@@ -74,11 +74,15 @@
       }
     }
 
-    .expand-row {
+    .expand-row-icon {
       cursor: pointer;
     }
 
-    img {
+    .expand-row-icon:hover {
+      fill: #058373 !important;
+    }
+
+    .expand-row-img {
       width: 120px;
       max-width: 100% !important;
       height: 60px;
@@ -87,7 +91,7 @@
       object-fit: contain;
     }
 
-    img:hover {
+    .expand-row-img:hover {
       border-radius: 5px;
       box-shadow: 0px 0px 13px -7px #564535;
     }
