--- a/src/components/manage/Blocks/CountryFlag/styles.less
+++ b/src/components/manage/Blocks/CountryFlag/styles.less
@@ -18,47 +18,32 @@
 }
 
 // copied from https://github.com/eea/volto-freshwater-policy/blob/74ace6a8b74c18cca3cb4fa40471297875d5ae50/src/components/Blocks/CountryHeaderDataBlock/style.less#L153C1-L197C2
-.ui.selection.visible.dropdown,
-.ui.selection.dropdown.countries-dd {
-  padding: 0 !important;
-  border: none !important;
-
-  > .text,
-  > .text:not(.default) {
-    min-height: 1rem;
-    padding: 0em;
-    margin-right: 10px;
-    // color: #004050 !important;
-    font-family: @headerFont;
-    font-size: @h1;
-    font-weight: @headerFontWeight !important;
-    line-height: @headerLineHeight;
-  }
-
-  .text {
-    font-family: @headerFont;
-    font-weight: 400;
-  }
-
-  > .menu {
-    border: 1px solid #f1f1f1 !important;
-    box-shadow: 0px 1px 3px 0px rgba(0, 0, 0, 0.08) !important;
-  }
-}
 
 .ui.selection.dropdown.countries-dd {
   display: inline-block !important;
+  min-height: auto;
+  padding: 0 !important;
   border: none;
   background-color: transparent;
+  color: #fff;
 
-  @media only screen and (max-width: @mobileLandscapeBreakpoint) {
-    display: flex !important;
-    min-width: auto !important;
-    align-items: self-end !important;
+  > .text,
+  > .text:not(.default) {
+    padding: 0em;
+    margin-right: 10px;
+    color: #fff !important;
+    font-size: inherit !important;
+    font-weight: inherit !important;
+  }
+
+  > .menu {
+    width: 250px;
+    min-width: auto;
+    border: 1px solid #f1f1f1 !important;
+    box-shadow: 0px 1px 3px 0px rgba(0, 0, 0, 0.08) !important;
   }
 
   i.icon {
-    // color: #004050 !important;
     display: inline;
     font-size: 30px;
   }
