style: remove dropdown border on focus

--- a/src/components/manage/Blocks/CountryFlag/styles.less
+++ b/src/components/manage/Blocks/CountryFlag/styles.less
@@ -27,6 +27,11 @@
   background-color: transparent;
   color: #fff;
 
+  &:active,
+  &:focus {
+    border: none;
+  }
+
   > .text,
   > .text:not(.default) {
     padding: 0em;
